syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.johanneshaberlah.tweetomat.twitter";
option java_outer_classname = "TwitterProto";

package tweetomat.twitter;

service TwitterService {
  rpc FindTweets (TwitterListTweetsRequest) returns (TwitterListTweetsResponse);
}

message TwitterListTweetsResponse {
  repeated string tweets = 1;
}

message TwitterListTweetsRequest {
  string name = 1;
}
